--- a/css/add.css
+++ b/css/add.css
@@ -116,5 +116,56 @@
     -webkit-box-shadow: 0 0 18px #F24D0C;
 }
 
+#switch_btn {
+    margin: 5px auto;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    color: white;
+    border-radius: 20px;
+    background-color: black;
+    text-align: center;
+}
+
+.cd-product-mockup {
+    height: 800px;
+}
+
+.cd-product-mockup::-webkit-scrollbar
+/*整体部分*/
+
+{
+    left: -10px;
+    width: 10px;
+    height: 10px;
+}
+
+.cd-product-mockup::-webkit-scrollbar-track
+/*滑动轨道*/
+
+{
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    border-radius: 0px;
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.cd-product-mockup::-webkit-scrollbar-thumb
+/*滑块*/
+
+{
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.cd-product-mockup::-webkit-scrollbar-thumb:hover
+/*滑块效果*/
+
+{
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.4);
+}
+
 
 /*———————————————————————————————————*/
