--- a/css/add.css
+++ b/css/add.css
@@ -22,7 +22,7 @@
 #legend-pannel {
     position: fixed;
     top: 9%;
-    left: 3%;
+    left: 6%;
     background-color: gray;
     width: 24%;
     height: 800px;
@@ -34,7 +34,7 @@
     text-align: center;
     position: fixed;
     top: 9%;
-    right: 3%;
+    right: 5%;
     background-color: gray;
     width: 30%;
     height: 800px;
@@ -72,7 +72,12 @@
     height: 50px;
 }
 
-.box-legend {}
+.box-legend {
+    text-align: center;
+    color: white;
+    font-size: 2em;
+    line-height: 50px;
+}
 
 .box-legend:hover {
     cursor: move;
@@ -90,6 +95,9 @@
     position: relative;
     background: #fa0;
     border-radius: 10px;
+    line-height: 30px;
+    text-align: center;
+    color: white;
     z-index: 1;
     margin: 0 auto;
     width: 100px;
