--- a/css/add.css
+++ b/css/add.css
@@ -11,6 +11,11 @@
     height: 50px;
 }
 
+.showInPoint {
+    -webkit-transition: border linear .2s, -webkit-box-shadow linear .5s;
+    -webkit-box-shadow: 0 0 18px #FF023F;
+}
+
 .cd-product-intro {
     background-color: gray;
     left: -200px;
@@ -29,8 +34,9 @@
     display: none;
     border-radius: 20px;
 }
-#floorInfo-pannel{
-    overflow-x:hidden; 
+
+#floorInfo-pannel {
+    overflow-x: hidden;
     text-align: center;
     position: fixed;
     display: none;
@@ -42,6 +48,7 @@
     border-radius: 20px;
     position: absolute;
 }
+
 #roomInfo-pannel {
     text-align: center;
     position: fixed;
@@ -59,6 +66,10 @@
     height: 50px;
     background-color: blue;
     border-radius: 100px;
+    text-align: center;
+    color: white;
+    font-size: 2em;
+    line-height: 50px;
 }
 
 .room-legend:hover {
@@ -103,6 +114,7 @@
 }
 
 .text-legend {
+    font-family: "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
     position: relative;
     background: #fa0;
     border-radius: 10px;
@@ -188,3 +200,51 @@
 
 
 /*———————————————————————————————————*/
+
+.mask {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    background: gray;
+    opacity: 0.95;
+    filter: alpha(opacity=40)
+}
+
+.spinner {
+    width: 60px;
+    height: 60px;
+    background-color: #67CF22;
+    margin: 400px auto;
+    -webkit-animation: rotateplane 1.2s infinite ease-in-out;
+    animation: rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes rotateplane {
+    0% {
+        -webkit-transform: perspective(120px)
+    }
+    50% {
+        -webkit-transform: perspective(120px) rotateY(180deg)
+    }
+    100% {
+        -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg)
+    }
+}
+
+@keyframes rotateplane {
+    0% {
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+    }
+    50% {
+        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+    }
+    100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    }
+}
