--- a/css/blue/desktop.css
+++ b/css/blue/desktop.css
@@ -49,12 +49,12 @@
 	position: relative;
 	
 	/*width:1100px;*/
-	width:96%;
+	/*width:96%;*/
 	height:50px;
-	padding: 10px 30px;
+	padding: 10px 0px;
 	margin: 20px auto 0px auto;
 	z-index:10;
-	opacity: 0.8; 
+	opacity: 0.9; 
 
 
 
